fixed second start button and fixing eye alignment

--- a/Find_me!/styles/eyes.scss
+++ b/Find_me!/styles/eyes.scss
@@ -1,4 +1,9 @@
 $length: 170px;
+.eye
+{
+    margin: auto;
+    padding-top: 20px;
+}
 #Shape1
 {
     width: 70%;
